MCCSS--main/k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: edenfield-restrict
spec:
  podSelector:
    matchLabels:
      app: edenfield
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 8000
        - protocol: TCP
          port: 9321
  egress:
    - to:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 53
